--- a/config/error_page/404_error.html
+++ b/config/error_page/404_error.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
-	<title>404 Error</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>webserv</title>
 </head>
-</html>
+
+<body>
+	<header>
+		<h1>404 Error</h1>
+	</header>
+	<main>
+		<p>Page not found</p>
+	</main>
+</body>
