--- a/config/web.html
+++ b/config/web.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
-	<title>Web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>webserv</title>
 </head>
-</html>
+
+<body>
+	<header>
+		<h1>Webserver</h1>
+	</header>
+</body>
