--- a/config/web.html
+++ b/config/web.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webserv</title>
 </head>
-
 <body>
-	<header>
-		<h1>Webserver</h1>
-	</header>
+    <header>
+        <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 2vw;">Webserver</h1>
+    </header>
+    <div style="margin-left: 28vw; padding :5vw; ">
+        <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Get</button>
+        <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Post</button>
+        <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Delete</button>
+    </main>
 </body>
+</html>
