--- a/config/web.html
+++ b/config/web.html
@@ -9,7 +9,7 @@
     <header>
         <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 2vw;">Webserver</h1>
     </header>
-    <div style="margin-left: 28vw; padding :5vw; ">
+    <div style="margin-left: 26vw; margin-right: 26vw; padding :5vw; ">
         <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Get</button>
         <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Post</button>
         <button style="font-size: 1.2vw;margin:1rem;width:10vw;height: auto; padding:1vw;">Delete</button>
