--- a/config/error_page/403.html
+++ b/config/error_page/403.html
@@ -7,7 +7,7 @@
     <title>webserv</title>
 </head>
 
-<body>
+<body style="background-color: rgb(54, 54, 54);">
 	<header>
 		<h1 style="text-align: center; text-shadow: 2px 2px 5px rgba(255, 0, 0, 0.8);">403 Error</h1>
 	</header>
