amelio utilisation de plusieur server plus requet delete qui marche

--- a/config/index.html
+++ b/config/index.html
@@ -38,11 +38,11 @@
     </header>
     <div class="card">
         <div style="text-align: center;">
-            <a href="get.html"><button>Get</button></a>
-            <a href="post.html"><button>Post</button></a>
-            <a href="delete.html"><button>Delete</button></a>
-            <a href="Upload.html"><button>Upload</button></a>
-            <a href="Download.html"><button>Download</button></a>
+            <a href="/page/get.html"><button>Get</button></a>
+            <a href="/page/post.html"><button>Post</button></a>
+            <a href="/page/delete.html"><button>Delete</button></a>
+            <a href="/page/Upload.html"><button>Upload</button></a>
+            <a href="/page/Download.html"><button>Download</button></a>
         </div>
     </div>
 </body>
