--- a/configV2/index2.html
+++ b/configV2/index2.html
@@ -34,7 +34,7 @@
 </head>
 <body style="background-color: rgb(54, 54, 54);">
     <header>
-        <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">Webserver</h1>
+        <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">Webserver_location</h1>
     </header>
     <div class="card">
         <div style="text-align: center;">
