cookie, ca crash sur refresh, pas de SECRETS

--- a/config/index.html
+++ b/config/index.html
@@ -43,6 +43,7 @@
             <a href="/page/delete.html"><button>Delete</button></a>
             <a href="/page/Upload.html"><button>Upload</button></a>
             <a href="/page/Download.html"><button>Download</button></a>
+            <a href="/page/Cooki.html"><button>Connexion</button></a>
         </div>
     </div>
 </body>
