--- a/config/error_page/403.html
+++ b/config/error_page/403.html
@@ -12,6 +12,6 @@
 		<h1 style="text-align: center; text-shadow: 2px 2px 5px rgba(255, 0, 0, 0.8);">403 Error</h1>
 	</header>
 	<main>
-		<p style="text-align: center; ">Page not found</p>
+		<p style="text-align: center; ">Forbidden</p>
 	</main>
 </body>
