--- a/config/index.html
+++ b/config/index.html
@@ -11,6 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 25vh;
+            margin-top: 10vh;
         }
 
         /* Styles des boutons */
@@ -33,10 +34,10 @@
     </style>
 </head>
 <body style="background-color: rgb(54, 54, 54);">
-    <h1>Session Token</h1>
-    <p id="token-display">Loading...</p>
+    <!-- <h1>Session Token</h1>
+    <p id="token-display">Loading...</p> -->
 
-    <script>
+    <!-- <script>
         // Function to extract a specific cookie by name
         function getCookie(name) {
         const cookies = document.cookie.split('; ');
@@ -54,7 +55,7 @@
         document.getElementById('token-display').textContent = sessionToken
         ? `Session Token: ${sessionToken}`
         : 'Session token not found.';
-    </script>
+    </script> -->
     <header>
         <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">Webserver</h1>
     </header>
