added Python cgi buttons and fixed what happens if the cgi isnt valid code

--- a/config/error_page/500.html
+++ b/config/error_page/500.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: rgb(54, 54, 54);">
 	<header>
-		<h1 style="text-align: center; text-shadow: 2px 2px 5px rgba(255, 0, 0, 0.8);">504 Gateway Timeout</h1>
+		<h1 style="text-align: center; text-shadow: 2px 2px 5px rgba(255, 0, 0, 0.8);">500 Internal Servor Error</h1>
 	</header>
 	<main>
 		<p style="text-align: center; ">Internal Servor Error, please try again later</p>
