Location dernier rempart des machines

--- a/config/index.html
+++ b/config/index.html
@@ -61,13 +61,13 @@
     </header>
     <div class="card">
         <div style="text-align: center;">
-            <a href="/page/get.html"><button>Get</button></a>
-            <a href="/page/post.html"><button>Post</button></a>
-            <a href="/page/delete.html"><button>Delete</button></a>
-            <a href="/page/Upload.html"><button>Upload</button></a>
-            <a href="/page/Download.html"><button>Download</button></a>
-            <a href="/page/Cooki.html"><button>Connexion</button></a>
-            <a href="/page/CGI.html"><button>CGI</button></a>
+            <a href="page/get.html"><button>Get</button></a>
+            <a href="page/post.html"><button>Post</button></a>
+            <a href="page/delete.html"><button>Delete</button></a>
+            <a href="page/Upload.html"><button>Upload</button></a>
+            <a href="page/Download.html"><button>Download</button></a>
+            <a href="page/Cooki.html"><button>Connexion</button></a>
+            <a href="page/CGI.html"><button>CGI</button></a>
         </div>
     </div>
 </body>
