--- a/config/index2.html
+++ b/config/index2.html
@@ -32,17 +32,19 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(0, 255, 0);">
+<body style="background-color: rgb(113, 161, 191);">
     <header>
-        <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">Webserver</h1>
+        <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">DEUXIEME SERVER</h1>
     </header>
     <div class="card">
         <div style="text-align: center;">
-            <a href="/page/get.html"><button>Get2</button></a>
-            <a href="/page/post.html"><button>Post2</button></a>
-            <a href="/page/delete.html"><button>Delete2</button></a>
-            <a href="/page/Upload.html"><button>Upload2</button></a>
-            <a href="/page/Download.html"><button>Download2</button></a>
+            <a href="page/get.html"><button>Get</button></a>
+            <a href="page/post.html"><button>Post</button></a>
+            <a href="page/delete.html"><button>Delete</button></a>
+            <a href="page/Upload.html"><button>Upload</button></a>
+            <a href="page/Download.html"><button>Download</button></a>
+            <a href="page/Cooki.html"><button>Connexion</button></a>
+            <a href="page/CGI.html"><button>CGI</button></a>
         </div>
     </div>
 </body>
