--- a/config/index3.html
+++ b/config/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webserv</title>
+    <title>3eme Serveur</title>
     <style>
         /* Style pour le conteneur de la carte */
         .card {
@@ -32,17 +32,19 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(54, 54, 54);">
+<body style="background-color: rgb(253, 232, 3);">
     <header>
         <h1 style="text-align: center; color:rgb(243, 0, 0); text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8); font-size: 4vw;">dwdwadaWebserver</h1>
     </header>
     <div class="card">
         <div style="text-align: center;">
-            <a href="/page/get.html"><button>Get</button></a>
-            <a href="/page/post.html"><button>Post</button></a>
-            <a href="/page/delete.html"><button>Delete</button></a>
-            <a href="/page/Upload.html"><button>Upload</button></a>
-            <a href="/page/Download.html"><button>Download</button></a>
+            <a href="page/get.html"><button>Get</button></a>
+            <a href="page/post.html"><button>Post</button></a>
+            <a href="page/delete.html"><button>Delete</button></a>
+            <a href="page/Upload.html"><button>Upload</button></a>
+            <a href="page/Download.html"><button>Download</button></a>
+            <a href="page/Cooki.html"><button>Connexion</button></a>
+            <a href="page/CGI.html"><button>CGI</button></a>
         </div>
     </div>
 </body>
